[gd_scene load_steps=11 format=2]

[ext_resource path="res://themes/GUI.theme" type="Theme" id=1]
[ext_resource path="res://scripts/Trade.gd" type="Script" id=2]
[ext_resource path="res://scripts/MarketInventory.gd" type="Script" id=3]
[ext_resource path="res://scripts/PlayerInventory.gd" type="Script" id=4]
[ext_resource path="res://pictures/spiceandwolfmap.jpeg" type="Texture" id=5]
[ext_resource path="res://fonts/connection_ii/ConnectionII.otf" type="DynamicFontData" id=6]
[ext_resource path="res://scripts/ToggleFullscreenButton.gd" type="Script" id=7]
[ext_resource path="res://scripts/QuitAppButton.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="root" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="TabContainer" type="TabContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1593.0
margin_bottom = 893.0
tab_align = 0
drag_to_rearrange_enabled = true

[node name="Trade" type="HBoxContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 54.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource( 2 )

[node name="TradeLeftContainer" type="VBoxContainer" parent="TabContainer/Trade"]
margin_right = 704.0
margin_bottom = 828.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarketInventoryLabel" type="Label" parent="TabContainer/Trade/TradeLeftContainer"]
margin_right = 704.0
margin_bottom = 36.0
size_flags_vertical = 8
text = "Market Inventory"

[node name="MarketInventory" type="ItemList" parent="TabContainer/Trade/TradeLeftContainer"]
margin_top = 40.0
margin_right = 704.0
margin_bottom = 828.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
allow_reselect = true
max_columns = 0
icon_scale = 0.5
script = ExtResource( 3 )

[node name="TradeCenterContainer" type="VBoxContainer" parent="TabContainer/Trade"]
margin_left = 708.0
margin_right = 869.0
margin_bottom = 828.0
alignment = 1

[node name="TradeBalanceLabel" type="Label" parent="TabContainer/Trade/TradeCenterContainer"]
margin_top = 330.0
margin_right = 161.0
margin_bottom = 366.0
text = "Balance:"

[node name="TradeBalanceValue" type="Label" parent="TabContainer/Trade/TradeCenterContainer"]
margin_top = 370.0
margin_right = 161.0
margin_bottom = 406.0
text = "0"
align = 2

[node name="TradeExchangeButton" type="Button" parent="TabContainer/Trade/TradeCenterContainer"]
margin_top = 410.0
margin_right = 161.0
margin_bottom = 452.0
text = "Exchange"

[node name="TradeResetButton" type="Button" parent="TabContainer/Trade/TradeCenterContainer"]
margin_top = 456.0
margin_right = 161.0
margin_bottom = 498.0
text = "Reset"

[node name="TradeRightContainer" type="VBoxContainer" parent="TabContainer/Trade"]
margin_left = 873.0
margin_right = 1578.0
margin_bottom = 828.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerInventoryLabel" type="Label" parent="TabContainer/Trade/TradeRightContainer"]
margin_right = 705.0
margin_bottom = 36.0
size_flags_vertical = 8
text = "Player Inventory"

[node name="PlayerInventory" type="ItemList" parent="TabContainer/Trade/TradeRightContainer"]
margin_top = 40.0
margin_right = 705.0
margin_bottom = 828.0
size_flags_horizontal = 3
size_flags_vertical = 3
allow_reselect = true
max_columns = 0
icon_scale = 0.5
script = ExtResource( 4 )

[node name="Map" type="ScrollContainer" parent="TabContainer"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 54.0
margin_right = -4.0
margin_bottom = -4.0

[node name="TextureRect" type="TextureRect" parent="TabContainer/Map"]
margin_right = 2000.0
margin_bottom = 2846.0
texture = ExtResource( 5 )

[node name="Options" type="VBoxContainer" parent="TabContainer"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 54.0
margin_right = -4.0
margin_bottom = -4.0
theme = SubResource( 2 )
alignment = 1

[node name="SettingsButton1" type="Button" parent="TabContainer/Options"]
margin_left = 367.0
margin_top = 347.0
margin_right = 1225.0
margin_bottom = 419.0
grow_horizontal = 0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Toggle Fullscren/Windowed"
script = ExtResource( 7 )

[node name="SettingsButton2" type="Button" parent="TabContainer/Options"]
margin_left = 738.0
margin_top = 423.0
margin_right = 853.0
margin_bottom = 495.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Exit"
script = ExtResource( 8 )
[connection signal="item_selected" from="TabContainer/Trade/TradeLeftContainer/MarketInventory" to="TabContainer/Trade" method="_on_MarketInventory_item_selected"]
[connection signal="item_selected" from="TabContainer/Trade/TradeRightContainer/PlayerInventory" to="TabContainer/Trade" method="_on_PlayerInventory_item_selected"]
